Add event table support (#360)

--- a/src/SerialLoops/Strings.resx
+++ b/src/SerialLoops/Strings.resx
@@ -59,7 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -176,11 +176,18 @@
   <data name="Add Map Characters" xml:space="preserve">
     <value>Add Map Characters</value>
   </data>
+  <data name="Add Read Flag" xml:space="preserve">
+    <value>Add Read Flag</value>
+    <comment>As in "add a read flag to the script"</comment>
+  </data>
   <data name="Add Section" xml:space="preserve">
     <value>Add Section</value>
   </data>
   <data name="Add Starting Chibis" xml:space="preserve">
     <value>Add Starting Chibis</value>
+  </data>
+  <data name="Add to Event Table" xml:space="preserve">
+    <value>Add to Event Table</value>
   </data>
   <data name="Adding frames to GIF..." xml:space="preserve">
     <value>Adding frames to GIF…</value>
@@ -1224,6 +1231,10 @@
   <data name="Language Template" xml:space="preserve">
     <value>Language Template</value>
   </data>
+  <data name="Listened to {0}" xml:space="preserve">
+    <value>Listened to {0}</value>
+    <comment>{0} is the name of a BGM that's been encountered while playing the game</comment>
+  </data>
   <data name="Load Game menu ticker tape" xml:space="preserve">
     <value>Load Game menu ticker tape</value>
   </data>
@@ -1659,6 +1670,10 @@
   <data name="Remove Missing Projects" xml:space="preserve">
     <value>Remove Missing Projects</value>
   </data>
+  <data name="Remove Read Flag" xml:space="preserve">
+    <value>Remove Read Flag</value>
+    <comment>As in "remove this read flag from the script"</comment>
+  </data>
   <data name="Remove Starting Chibis" xml:space="preserve">
     <value>Remove Starting Chibis</value>
   </data>
@@ -1727,6 +1742,10 @@
   </data>
   <data name="Results" xml:space="preserve">
     <value>Results</value>
+  </data>
+  <data name="Route &quot;{0}&quot; Completed" xml:space="preserve">
+    <value>Route "{0}" Completed</value>
+    <comment>{0} is the name of a route following a group selection that has been completed</comment>
   </data>
   <data name="Routes" xml:space="preserve">
     <value>Routes</value>
@@ -1835,6 +1854,10 @@
   </data>
   <data name="Script Section" xml:space="preserve">
     <value>Script Section</value>
+  </data>
+  <data name="Script {0} Section {1} Completed" xml:space="preserve">
+    <value>Script {0} Section {1} Completed</value>
+    <comment>{0} is the display name of a script and {1} is the name of the section of that script that has been completed</comment>
   </data>
   <data name="Script:" xml:space="preserve">
     <value>Script: </value>
@@ -1952,6 +1975,9 @@
   <data name="SFX" xml:space="preserve">
     <value>SFX</value>
   </data>
+  <data name="SFX Group" xml:space="preserve">
+    <value>SFX Group</value>
+  </data>
   <data name="SFXs" xml:space="preserve">
     <value>SFXs</value>
   </data>
@@ -2009,6 +2035,10 @@
   </data>
   <data name="Start" xml:space="preserve">
     <value>Start</value>
+  </data>
+  <data name="Start Read Flag" xml:space="preserve">
+    <value>Start Read Flag</value>
+    <comment>As in, the first read flag of the script file</comment>
   </data>
   <data name="Starting Chibis" xml:space="preserve">
     <value>Starting Chibis</value>
@@ -2069,6 +2099,9 @@
   </data>
   <data name="The changes made will require Serial Loops to be restarted. Is that okay?" xml:space="preserve">
     <value>The changes made will require Serial Loops to be restarted. Is that okay?</value>
+  </data>
+  <data name="This script is not included in the event table." xml:space="preserve">
+    <value>This script is not included in the event table.</value>
   </data>
   <data name="This system texture uses a common palette, so palette replacement has been disabled" xml:space="preserve">
     <value>This system texture uses a common palette, so palette replacement has been disabled</value>
@@ -2322,16 +2355,28 @@
   <data name="Yuki Nagato event unlocked message box" xml:space="preserve">
     <value>Yuki Nagato event unlocked message box</value>
   </data>
+  <data name="{0} ({1}) Seen" xml:space="preserve">
+    <value>{0} ({1}) Seen</value>
+    <comment>{0} is the internal name and {1} is the display name of a CG that has been encountered during the game</comment>
+  </data>
   <data name="{0} - Adjust Volume" xml:space="preserve">
     <value>{0} - Adjust Volume</value>
   </data>
   <data name="{0} - Manage Loop" xml:space="preserve">
     <value>{0} - Manage Loop</value>
   </data>
+  <data name="{0} Obtained" xml:space="preserve">
+    <value>{0} Obtained</value>
+    <comment>{0} is the name of a topic that's been obtained</comment>
+  </data>
   <data name="{0} results" xml:space="preserve">
     <value>{0} results</value>
   </data>
   <data name="{0} results found" xml:space="preserve">
     <value>{0} results found</value>
+  </data>
+  <data name="{0} Watched in Extras" xml:space="preserve">
+    <value>{0} Watched in Extras</value>
+    <comment>{0} is the name of a topic that has had its associated scene watched in the Extras mode</comment>
   </data>
 </root>
