--- a/src/SerialLoops/Strings.resx
+++ b/src/SerialLoops/Strings.resx
@@ -59,7 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -584,6 +584,9 @@
   <data name="devkitARM Docker Tag" xml:space="preserve">
     <value>devkitARM Docker Tag</value>
   </data>
+  <data name="devkitARM is not detected at the default or specified install location. Please set devkitARM path." xml:space="preserve">
+    <value>devkitARM is not detected at the default or specified install location. Please set devkitARM path.</value>
+  </data>
   <data name="DevkitARM must be supplied in order to build!" xml:space="preserve">
     <value>DevkitARM must be supplied in order to build!</value>
   </data>
@@ -801,6 +804,9 @@
   <data name="Error: duplicate hack detected! A hack with the same name has already been imported." xml:space="preserve">
     <value>Error: duplicate hack detected! A hack with the same name has already been imported.</value>
   </data>
+  <data name="Exception occurred while parsing config.json!" xml:space="preserve">
+    <value>Exception occurred while parsing config.json!</value>
+  </data>
   <data name="Exception occurred while parsing projects_cache.json!" xml:space="preserve">
     <value>Exception occurred while parsing projects_cache.json!</value>
   </data>
@@ -915,6 +921,10 @@
   <data name="Failed to delete files for hack '{0}' -- this hack is likely applied in the ROM base and can't be disabled." xml:space="preserve">
     <value>Failed to delete files for hack '{0}' -- this hack is likely applied in the ROM base and can't be disabled.</value>
   </data>
+  <data name="Failed to deserialize script template file '{0}'" xml:space="preserve">
+    <value>Failed to deserialize script template file '{0}'</value>
+    <comment>{0} is a script template file path.</comment>
+  </data>
   <data name="Failed to export background {0} to file {1}" xml:space="preserve">
     <value>Failed to export background {0} to file {1}</value>
   </data>
@@ -959,6 +969,9 @@
   </data>
   <data name="Failed to load voice file: file not found." xml:space="preserve">
     <value>Failed to load voice file: file not found.</value>
+  </data>
+  <data name="Failed to parse script parameter {0} of type {1} with parameter '{2}'!" xml:space="preserve">
+    <value>Failed to parse script parameter {0} of type {1} with parameter '{2}'!</value>
   </data>
   <data name="Failed to read ARM9 from '{0}'" xml:space="preserve">
     <value>Failed to read ARM9 from '{0}'</value>
