Add template generation from scripts

--- a/src/SerialLoops/Strings.resx
+++ b/src/SerialLoops/Strings.resx
@@ -227,6 +227,7 @@
   </data>
   <data name="Apply Template" xml:space="preserve">
     <value>Apply Template</value>
+    <comment>The template in question is a script template</comment>
   </data>
   <data name="Arrow Keys - Move Image" xml:space="preserve">
     <value>Arrow Keys - Move Image</value>
@@ -946,6 +947,9 @@
   <data name="Failed to find character item -- have you saved all of your changes to character names?" xml:space="preserve">
     <value>Failed to find character item -- have you saved all of your changes to character names?</value>
   </data>
+  <data name="Failed to generate script template!" xml:space="preserve">
+    <value>Failed to generate script template!</value>
+  </data>
   <data name="Failed to insert ARM9 assembly hacks" xml:space="preserve">
     <value>Failed to insert ARM9 assembly hacks</value>
   </data>
@@ -1096,6 +1100,10 @@
   </data>
   <data name="gcc not found at '{0}'" xml:space="preserve">
     <value>gcc not found at '{0}'</value>
+  </data>
+  <data name="Generate Template" xml:space="preserve">
+    <value>Generate Template</value>
+    <comment>Template in question is a script template</comment>
   </data>
   <data name="German" xml:space="preserve">
     <value>German</value>
@@ -2094,6 +2102,15 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Template</value>
+    <comment>Tool bar text for "apply [script] template" -- needs to be short to fit in the toolbar button</comment>
+  </data>
+  <data name="Template Name" xml:space="preserve">
+    <value>Template Name</value>
+    <comment>Template in question is a script template</comment>
+  </data>
+  <data name="Template Properties" xml:space="preserve">
+    <value>Template Properties</value>
+    <comment>Template in question is a script template</comment>
   </data>
   <data name="Text Color" xml:space="preserve">
     <value>Text Color</value>
