Reduce footprint of ROM in the slzip

--- a/src/SerialLoops/Strings.resx
+++ b/src/SerialLoops/Strings.resx
@@ -309,6 +309,9 @@
     <value>Both</value>
     <comment>Checkbox for "Both Screens"</comment>
   </data>
+  <data name="Both an exported project and a base ROM must be selected to import a project." xml:space="preserve">
+    <value>Both an exported project and a base ROM must be selected to import a project.</value>
+  </data>
   <data name="Both Screens" xml:space="preserve">
     <value>Both Screens</value>
   </data>
@@ -788,6 +791,9 @@
   <data name="Erase data options title" xml:space="preserve">
     <value>Erase data options title</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="Error getting script command tree for script {0} ({1})" xml:space="preserve">
     <value>Error getting script command tree for script {0} ({1})</value>
     <comment>{0} is the script display name, {1} is the script's underlying name</comment>
@@ -806,6 +812,10 @@
   </data>
   <data name="Exception occurred while parsing projects_cache.json!" xml:space="preserve">
     <value>Exception occurred while parsing projects_cache.json!</value>
+  </data>
+  <data name="Expected ROM SHA-1 Hash: {0}" xml:space="preserve">
+    <value>Expected ROM SHA-1 Hash: {0}</value>
+    <comment>{0} is the SHA-1 hash of the ROM that is expected when importing a project</comment>
   </data>
   <data name="Export" xml:space="preserve">
     <value>Export</value>
@@ -1178,6 +1188,10 @@
   <data name="Image Files" xml:space="preserve">
     <value>Image Files</value>
   </data>
+  <data name="Import" xml:space="preserve">
+    <value>Import</value>
+    <comment>As in import an exported project</comment>
+  </data>
   <data name="Import a Hack" xml:space="preserve">
     <value>Import a Hack</value>
   </data>
@@ -1423,6 +1437,9 @@
   <data name="No emulator path has been set.\nPlease set the path to a Nintendo DS emulator in Preferences to use Build &amp; Run." xml:space="preserve">
     <value>No emulator path has been set.\nPlease set the path to a Nintendo DS emulator in Preferences to use Build &amp; Run.</value>
   </data>
+  <data name="No exported project selected" xml:space="preserve">
+    <value>No exported project selected</value>
+  </data>
   <data name="No hacks applied!" xml:space="preserve">
     <value>No hacks applied!</value>
   </data>
@@ -1435,6 +1452,9 @@
   <data name="No recent projects. Create one and it will appear here." xml:space="preserve">
     <value>No recent projects. Create one and it will appear here.</value>
   </data>
+  <data name="No ROM Hash Recorded!" xml:space="preserve">
+    <value>No ROM Hash Recorded!</value>
+  </data>
   <data name="No save data ticker tape" xml:space="preserve">
     <value>No save data ticker tape</value>
   </data>
@@ -1446,6 +1466,7 @@
   </data>
   <data name="None Selected" xml:space="preserve">
     <value>None Selected</value>
+    <comment>In the context of "no ROM selected"</comment>
   </data>
   <data name="Number of Saves:" xml:space="preserve">
     <value>Number of Saves: </value>
@@ -1470,6 +1491,10 @@
   </data>
   <data name="Open Chokuretsu Save File" xml:space="preserve">
     <value>Open Chokuretsu Save File</value>
+  </data>
+  <data name="Open Exported Project" xml:space="preserve">
+    <value>Open Exported Project</value>
+    <comment>As in a slzip exported project</comment>
   </data>
   <data name="Open Project" xml:space="preserve">
     <value>Open Project</value>
@@ -1782,6 +1807,10 @@
   <data name="Results" xml:space="preserve">
     <value>Results</value>
   </data>
+  <data name="ROM Hash Mismatch" xml:space="preserve">
+    <value>ROM Hash Mismatch</value>
+    <comment>Message box title when there is a mismatch between the expected ROM hash and the selected ROM hash on project import</comment>
+  </data>
   <data name="Route &quot;{0}&quot; Completed" xml:space="preserve">
     <value>Route "{0}" Completed</value>
     <comment>{0} is the name of a route following a group selection that has been completed</comment>
@@ -1943,6 +1972,9 @@
   </data>
   <data name="Select a Topic" xml:space="preserve">
     <value>Select a Topic</value>
+  </data>
+  <data name="Select an exported project to see expected ROM hash" xml:space="preserve">
+    <value>Select an exported project to see expected ROM hash</value>
   </data>
   <data name="Select base ROM" xml:space="preserve">
     <value>Select base ROM</value>
@@ -2140,8 +2172,17 @@
   <data name="Text Voice Font" xml:space="preserve">
     <value>Text Voice Font</value>
   </data>
+  <data name="The base ROM hash does not match the expected hash! Please check the \&quot;Ignore Hash\&quot; checkbox if you wish to override this." xml:space="preserve">
+    <value>The base ROM hash does not match the expected hash! Please check the \"Ignore Hash\" checkbox if you wish to override this.</value>
+  </data>
   <data name="The changes made will require Serial Loops to be restarted. Is that okay?" xml:space="preserve">
     <value>The changes made will require Serial Loops to be restarted. Is that okay?</value>
+  </data>
+  <data name="The selected ROM's hash does not match the expected ROM hash. Please ensure you are using the correct base ROM.\n\nIf you wish to ignore this, please check the \&quot;Ignore Hash\&quot; checkbox." xml:space="preserve">
+    <value>The selected ROM's hash does not match the expected ROM hash. Please ensure you are using the correct base ROM.\n\nIf you wish to ignore this, please check the \"Ignore Hash\" checkbox.</value>
+  </data>
+  <data name="There is no recorded base ROM hash for this project. This is likely because this project was created with an older version of Serial Loops. Please select the base ROM used for this project so the hash can be recorded now." xml:space="preserve">
+    <value>There is no recorded base ROM hash for this project. This is likely because this project was created with an older version of Serial Loops. Please select the base ROM used for this project so the hash can be recorded now.</value>
   </data>
   <data name="This script is not included in the event table." xml:space="preserve">
     <value>This script is not included in the event table.</value>
