Switch to dotnet bundle

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -155,6 +155,9 @@
   <data name="About" xml:space="preserve">
     <value>About</value>
   </data>
+  <data name="About Serial Loops" xml:space="preserve">
+    <value>About Serial Loops</value>
+  </data>
   <data name="About..." xml:space="preserve">
     <value>About…</value>
   </data>
