--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2313,7 +2313,7 @@
     <value>Vertical Intensity</value>
   </data>
   <data name="View &amp;Logs" xml:space="preserve">
-    <value>View &amp;Logs</value>
+    <value>View _Logs</value>
   </data>
   <data name="View Logs" xml:space="preserve">
     <value>View Logs</value>
