--- a/src/SerialLoops/Assets/Strings.pt-BR.resx
+++ b/src/SerialLoops/Assets/Strings.pt-BR.resx
@@ -1,5 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -64,8 +123,8 @@
   <data name="100%'d game message box" xml:space="preserve">
     <value>Caixa de mensagem 100% do jogo</value>
   </data>
-  <data name="&amp;Tools" xml:space="preserve">
-    <value>&amp;Ferramentas</value>
+  <data name="_Tools" xml:space="preserve">
+    <value>_Ferramentas</value>
   </data>
   <data name="Add Command" xml:space="preserve">
     <value>Adicionar Comando</value>
@@ -97,14 +156,14 @@
     <value>Adicionar</value>
     <comment>As in add/subtract</comment>
   </data>
-  <data name="&amp;File" xml:space="preserve">
-    <value>&amp;Arquivo</value>
+  <data name="_File" xml:space="preserve">
+    <value>_Arquivo</value>
   </data>
   <data name="(Missing)" xml:space="preserve">
     <value> (Faltando)</value>
   </data>
-  <data name="&amp;Build" xml:space="preserve">
-    <value>&amp;Construir</value>
+  <data name="_Build" xml:space="preserve">
+    <value>_Construir</value>
   </data>
   <data name="A new update for Serial Loops is available!" xml:space="preserve">
     <value>Uma nova atualização está disponível!</value>
@@ -116,14 +175,14 @@
   <data name="%" xml:space="preserve">
     <value>%</value>
   </data>
-  <data name="&amp;Edit" xml:space="preserve">
-    <value>&amp;Editar</value>
+  <data name="_Edit" xml:space="preserve">
+    <value>_Editar</value>
   </data>
-  <data name="&amp;Check for Updates..." xml:space="preserve">
-    <value>&amp;Procurar por atualizações…</value>
+  <data name="_Check for Updates..." xml:space="preserve">
+    <value>_Procurar por atualizações…</value>
   </data>
-  <data name="&amp;Preferences..." xml:space="preserve">
-    <value>&amp;Configurações…</value>
+  <data name="_Preferences..." xml:space="preserve">
+    <value>_Configurações…</value>
   </data>
   <data name="Add Frames" xml:space="preserve">
     <value>Adicionar Frames</value>
