--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -124,24 +124,6 @@
     <value>%</value>
     <comment>Just the percentage symbol</comment>
   </data>
-  <data name="&amp;Build" xml:space="preserve">
-    <value>_Build</value>
-  </data>
-  <data name="&amp;Check for Updates..." xml:space="preserve">
-    <value>_Check for Updates…</value>
-  </data>
-  <data name="&amp;Edit" xml:space="preserve">
-    <value>_Edit</value>
-  </data>
-  <data name="&amp;File" xml:space="preserve">
-    <value>_File</value>
-  </data>
-  <data name="&amp;Preferences..." xml:space="preserve">
-    <value>_Preferences…</value>
-  </data>
-  <data name="&amp;Tools" xml:space="preserve">
-    <value>_Tools</value>
-  </data>
   <data name="(Missing)" xml:space="preserve">
     <value> (Missing)</value>
     <comment>For when a project file has been deleted</comment>
@@ -2432,11 +2414,11 @@
   <data name="Vertical Intensity" xml:space="preserve">
     <value>Vertical Intensity</value>
   </data>
-  <data name="View &amp;Logs" xml:space="preserve">
-    <value>View _Logs</value>
-  </data>
   <data name="View Logs" xml:space="preserve">
     <value>View Logs</value>
+  </data>
+  <data name="View _Logs" xml:space="preserve">
+    <value>View _Logs</value>
   </data>
   <data name="Visible?" xml:space="preserve">
     <value>Visible?</value>
@@ -2516,12 +2498,30 @@
   <data name="Yuki Nagato event unlocked message box" xml:space="preserve">
     <value>Yuki Nagato event unlocked message box</value>
   </data>
+  <data name="_Build" xml:space="preserve">
+    <value>_Build</value>
+  </data>
+  <data name="_Check for Updates..." xml:space="preserve">
+    <value>_Check for Updates…</value>
+  </data>
+  <data name="_Edit" xml:space="preserve">
+    <value>_Edit</value>
+  </data>
+  <data name="_File" xml:space="preserve">
+    <value>_File</value>
+  </data>
   <data name="_Help" xml:space="preserve">
     <value>_Help</value>
+  </data>
+  <data name="_Preferences..." xml:space="preserve">
+    <value>_Preferences…</value>
   </data>
   <data name="_Project" xml:space="preserve">
     <value>_Project</value>
     <comment>Menu header</comment>
+  </data>
+  <data name="_Tools" xml:space="preserve">
+    <value>_Tools</value>
   </data>
   <data name="{0} ({1}) Seen" xml:space="preserve">
     <value>{0} ({1}) Seen</value>
