feat: improve preferences UX
* now uses tabs
* added a label warning control if a restart is needed
* will reopen if you decline a restart

--- a/src/SerialLoops/Assets/Strings.en-GB.resx
+++ b/src/SerialLoops/Assets/Strings.en-GB.resx
@@ -2327,4 +2327,7 @@
   <data name="{0} results found" xml:space="preserve">
     <value>{0} results found</value>
   </data>
+  <data name="Restart required" xml:space="preserve">
+    <value>Restart required</value>
+  </data>
 </root>
