--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -845,6 +845,9 @@
   <data name="Export" xml:space="preserve">
     <value>Export</value>
   </data>
+  <data name="Export Background Image" xml:space="preserve">
+    <value>Export Background Image</value>
+  </data>
   <data name="Export Frames" xml:space="preserve">
     <value>Export Frames</value>
   </data>
@@ -868,6 +871,9 @@
   </data>
   <data name="Export Sprites" xml:space="preserve">
     <value>Export Sprites</value>
+  </data>
+  <data name="Export System Texture" xml:space="preserve">
+    <value>Export System Texture</value>
   </data>
   <data name="Exported Project" xml:space="preserve">
     <value>Exported Project</value>
@@ -1253,7 +1259,7 @@
     <value>Invalid audio file selected.</value>
   </data>
   <data name="Invalid image file selected" xml:space="preserve">
-        <value>Invalid image file selected</value>
+    <value>Invalid image file selected</value>
   </data>
   <data name="Invalid item type!" xml:space="preserve">
     <value>Invalid item type!</value>
@@ -1800,6 +1806,9 @@
   <data name="Replace" xml:space="preserve">
     <value>Replace</value>
   </data>
+  <data name="Replace Background Image" xml:space="preserve">
+    <value>Replace Background Image</value>
+  </data>
   <data name="Replace BGM" xml:space="preserve">
     <value>Replace BGM</value>
   </data>
@@ -1809,8 +1818,14 @@
   <data name="Replace Frames" xml:space="preserve">
     <value>Replace Frames</value>
   </data>
+  <data name="Replace Game Icon" xml:space="preserve">
+    <value>Replace Game Icon</value>
+  </data>
   <data name="Replace me" xml:space="preserve">
     <value>Replace me</value>
+  </data>
+  <data name="Replace System Texture" xml:space="preserve">
+    <value>Replace System Texture</value>
   </data>
   <data name="Replace voiced line" xml:space="preserve">
     <value>Replace voiced line</value>
